# pip_demo

./: LICENSE.txt  README.md  pyproject.toml
notebooks/: test_pip.py
src/pip_demo/: __about__.py  __init__.py
