[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pip-demo"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "nsenno-dbr", email = "nick.senno@databricks.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/nsenno-dbr/pip-demo#readme"
Issues = "https://github.com/nsenno-dbr/pip-demo/issues"
Source = "https://github.com/nsenno-dbr/pip-demo"

[tool.hatch.version]
path = "src/pip_demo/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pip_demo tests}"

[tool.coverage.run]
source_pkgs = ["pip_demo", "tests"]
branch = true
parallel = true
omit = [
  "src/pip_demo/__about__.py",
]

[tool.coverage.paths]
pip_demo = ["src/pip_demo", "*/pip-demo/src/pip_demo"]
tests = ["tests", "*/pip-demo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
